# remaken

./: .gitignore  .gitmodules  README.md  meson.build  meson_build.sh  remaken.pro
.github/workflows/: remaken-actions.yml
scripts/artipackager/: mac_artipackager.sh  unixes_artipackager.sh  win_artiPackager.bat
scripts/sh_install/: installRemaken.sh
src/: CmdOptions.cpp  CmdOptions.h  Constants.cpp  Constants.h
src/backends/: BackendGeneratorFactory.cpp  MesonGeneratorBackend.cpp  MesonGeneratorBackend.h
src/commands/: InitCommand.cpp  RemoteCommand.cpp
src/managers/: BundleManager.cpp  BundleManager.h  DependencyManager.cpp  DependencyManager.h  XpcfXmlManager.cpp
src/retrievers/: CredentialsFileRetriever.cpp
src/tools/: ConanSystemTool.cpp
src/utils/: DepUtils.cpp  DepUtils.h  OsUtils.cpp  PathBuilder.cpp  PathBuilder.h
